--- a/ddp-workspace/projects/ddp-prion/src/styles.scss
+++ b/ddp-workspace/projects/ddp-prion/src/styles.scss
@@ -17,7 +17,7 @@ body {
     font-family: 'Raleway', sans-serif;
 }
 
-@media only screen and (min-width: 1026px) {
+@media only screen and (min-width: 1027px) {
     html{
         font-size: 18px !important;
     }
@@ -60,6 +60,11 @@ p {
     font-size: 1rem;
     line-height: 1.5rem;
     font-weight: 400 !important;
+}
+
+// Right-to-left language styles
+html[dir='rtl'] {
+    //TODO
 }
 
 .StandardCaps {
@@ -577,6 +582,10 @@ input.mat-input-element.study-listing-filter {
   margin-top: 0;
 }
 
+.study-listing-filter {
+ //TODO: Hebrew
+}
+
 .study-listing-filter-all-container {
     min-width: 660px;
 }
@@ -704,22 +713,42 @@ input.mat-input-element.study-listing-filter {
     width: 660px;
 }
 
+html[lang='es'] .navbar-nav {
+    width: 800px;
+}
+
 @media only screen and (min-width: 1027px) and (max-width: 1200px) {
+    html[dir='rtl'] .Header-background {
+        padding: 30px 80px 20px 40px !important;
+    }
     .Header-background {
         padding: 30px 40px 20px 80px !important;
     }
+    html[lang="he"] .Nav-item.Nav-item-JoinUs {
+        padding-left: 20px;
+    }
+    html[lang="es"] .navbar-nav {
+        width: 500px;
+    }
     .navbar-nav {
-        float: right !important;
         width: 660px;
     }
 }
 
 @media only screen and (min-width: 993px) and (max-width: 1026px) {
+    html[dir='rtl'] .Header-background {
+        padding: 30px 80px 20px 40px !important;
+    }
     .Header-background {
         padding: 30px 40px 20px 80px !important;
     }
+    html[lang="es"] .navbar-nav {
+        width: 486px;
+    }
+    html[lang='he'] .navbar-nav {
+        width: 640px;
+    }
     .navbar-nav {
-        float: right !important;
         width: 584px;
     }
 }
@@ -731,11 +760,45 @@ input.mat-input-element.study-listing-filter {
     .navbar-header {
         padding: 0 10px 25px 25px !important;
     }
+    html[dir="rtl"] .navbar-header {
+        padding: 0 25px 25px 10px !important;
+    }
     .navbar-collapse {
         padding: 0 25px 10px 25px !important;
     }
+    html[lang="es"] .navbar-nav {
+        width: 430px !important;
+    }
+    html[lang='zh'] .navbar-nav {
+        width: 340px !important;
+    }
+    html[dir="rtl"] .navbar-nav {
+        width: 400px !important;
+    }
     .navbar-nav {
         width: 415px !important;
+    }
+}
+
+
+@media only screen and (min-width: 768px) {
+    html[dir='rtl'] .navbar-header {
+        float: right !important;
+    }
+
+    html[dir='rtl'] .navbar-nav {
+        float: left !important;
+        padding-right: 0;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    html[dir='rtl'] .Header-logo {
+        float: right !important;
+    }
+
+    html[dir='rtl'] .Header-hamburger {
+        float: left !important;
     }
 }
 
@@ -815,7 +878,11 @@ input.mat-input-element.study-listing-filter {
 }
 
 .Nav-item:first-of-type {
-  padding-left: 20px !important;
+    padding-left: 20px !important;
+}
+
+html[dir='rtl'] .Nav-item:first-of-type {
+    padding-left: 0 !important;
 }
 
 #JoinUsLink {
@@ -901,6 +968,10 @@ button[data-ddp-test="signInButton"], button[ data-ddp-test="signOutButton"] {
   height: 90px;
 }
 
+html[dir='rtl'] .Footer-left {
+    float: right;
+}
+
 p.Footer-contact {
   font-size: 0.9rem !important;
   color: #727272 !important;
@@ -912,6 +983,10 @@ p.Footer-contact {
 .Footer-links {
   height: 90px;
   padding: 31px 0 0;
+}
+
+html[dir='rtl'] .Footer-links {
+    float: right !important;
 }
 
 .Footer-text {
@@ -935,6 +1010,10 @@ p.Footer-contact {
   border: none;
   border-image-width: 0;
   white-space: nowrap;
+}
+
+html[dir='rtl'] .Footer-link {
+    text-align: right;
 }
 
 .Footer-link:hover, .Footer-link .SimpleButton:hover {
@@ -1022,6 +1101,10 @@ button.Footer-link {
     -webkit-box-shadow: none;
     box-shadow: none;
     z-index: 100;
+}
+
+html[dir='rtl'] .PageLayout.row .col-lg-8.col-md-10.col-sm-12.col-xs-12 {
+  float: right;
 }
 
 .PageLayout {
@@ -1802,6 +1885,10 @@ ul {
     margin-bottom: 5px;
 }
 
+html[dir='rtl'] .WizardStepsContainer {
+    display: flex;
+}
+
 .WizardSteps {
      position: relative;
      margin: 24px 0 24px 0;
@@ -1950,6 +2037,10 @@ ul {
 
 .PageContent-text-dashboard {
     font-size: 1rem !important;
+}
+
+html[dir='rtl'] .PageContent-text-dashboard {
+    text-align: right;
 }
 
 .PageContent-text br {
@@ -2152,6 +2243,10 @@ p.ddp-question-prompt{
   margin-bottom: 0 !important;
 }
 
+html[dir='rtl'] .BulletItem {
+    text-align: right;
+}
+
 .BulletItem {
   display: list-item;
   list-style-type: disc;
@@ -2245,6 +2340,10 @@ p.Input-label {
 
 .ddp-textarea {
     height: 1.5rem !important;
+}
+
+html[dir='rtl'] .ddp-answer-container {
+    flex-direction: row-reverse;
 }
 
 .ddp-answer-container {
@@ -2374,6 +2473,10 @@ ddp-activity-composite-answer .ddp-answer-container {
     font-size: 1.25rem;
     font-weight: 500;
 }
+
+/*html[dir='rtl'] .example-radio-group {
+    flex-direction: row-reverse;
+}*/
 
 .example-radio-group {
     display: flex;
@@ -3262,6 +3365,10 @@ p.Medium {
   padding: 0;
 }
 
+html[dir='rtl'] .cookiesBanner {
+    flex-direction: row-reverse;
+}
+
 .cookiesBanner {
   display: flex;
   flex-direction: row;
@@ -3332,6 +3439,21 @@ p.Medium {
   .cookiesBanner {
     padding: 15px;
   }
+}
+
+html[dir='rtl'] .cookiesModal.cookiesModal--header,
+html[dir='rtl'] .privacyModal.privacyModal--header {
+    flex-direction: row-reverse;
+}
+
+html[dir='rtl'] .cookiesModal.cookiesModal--actions,
+html[dir='rtl'] .privacyModal.privacyModal--header {
+    flex-direction: row-reverse;
+}
+
+html[dir='rtl'] .cookiesModal.cookiesModal--tabHeader,
+html[dir='rtl'] .privacyModal.privacyModal--tabHeader {
+    flex-direction: row-reverse;
 }
 
 .cookiesModal, .privacyModal {
@@ -3424,6 +3546,13 @@ p.Medium {
     }
   }
 }
+
+html[dir='rtl'] .toolkit-cookies-preferences-modal .mat-tab-group,
+html[dir='rtl'] .toolkit-cookies-preferences-modal .mat-radio-group
+{
+    flex-direction: row-reverse;
+}
+
 
 toolkit-cookies-preferences-modal {
   .mat-tab-group {
@@ -3548,6 +3677,11 @@ toolkit-privacy-policy-modal {
     }
   }
 
+  html[dir='rtl'] .toolkit-cookies-preferences-modal .mat-tab-labels,
+  html[dir='rtl'] .toolkit-cookies-preferences-modal .mat-tab-labels {
+      flex-direction: row-reverse;
+  }
+
   toolkit-cookies-preferences-modal {
     .mat-tab-group {
       flex-direction: column;
@@ -3624,6 +3758,10 @@ toolkit-privacy-policy-modal {
   }
 }
 
+html[dir='rtl'] .mat-dialog-container {
+    direction: rtl;
+}
+
 toolkit-privacy-policy-modal {
   .Container, .PageContent {
     background: transparent;
@@ -3698,6 +3836,10 @@ app-third-party {
   border: 1px solid #9E9E9E !important;
   background-color: #9E9E9E !important;
   color: #ffffff !important;
+}
+
+html[dir='rtl'] .ModalActivity.header {
+    flex-direction: row-reverse;
 }
 
 .ModalActivity {
